--- a/partials/api/angularPoint.apFieldService.html
+++ b/partials/api/angularPoint.apFieldService.html
@@ -11,15 +11,15 @@
 </li>
 </ul>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_field">Field(obj)</h3>
+<ul class="methods"><li><h3 id="methods_apdefaultfields">apDefaultFields()</h3>
+<div class="apdefaultfields"><div class="angularpoint-apdefaultfields-page"><p>Read only fields that should be included in all lists</p>
+</div></div>
+</li>
+<li><h3 id="methods_field">Field(obj)</h3>
 <div class="field"><div class="angularpoint-apfieldservice-page angularpoint-apfieldservice-field-page"><p>Decorates field with optional defaults</p>
 </div><h5 id="methods_field_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>obj</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apfieldservice-page angularpoint-apfieldservice-field-page"><p>Field definition.</p>
 </div></td></tr></tbody></table><h5 id="methods_field_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="angularpoint-apfieldservice-page angularpoint-apfieldservice-field-page"><p>Field</p>
 </div></td></tr></table></div>
-</li>
-<li><h3 id="methods_defaultfields">defaultFields()</h3>
-<div class="defaultfields"><div class="angularpoint-apfieldservice-page angularpoint-apfieldservice-defaultfields-page"><p>Read only fields that should be included in all lists</p>
-</div></div>
 </li>
 <li><h3 id="methods_extendfielddefinitions">extendFieldDefinitions(list)</h3>
 <div class="extendfielddefinitions"><div class="angularpoint-apfieldservice-page angularpoint-apfieldservice-extendfielddefinitions-page"><ol>
