--- a/partials/api/apDataService.getAvailableWorkflows.html
+++ b/partials/api/apDataService.getAvailableWorkflows.html
@@ -8,13 +8,13 @@
 apDataService.startWorkflow because it requires the template GUID for the target workflow.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
-<div class="usage"><pre class="prettyprint linenums">getAvailableWorkflows(entity);</pre>
-<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>entity</td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getavailableworkflows-page"><p>SharePoint list item or document.</p>
+<div class="usage"><pre class="prettyprint linenums">getAvailableWorkflows(fileRefString);</pre>
+<h4 id="usage_parameters">Parameters</h4><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>fileRefString</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="apdataservice-getavailableworkflows-page"><p>Relative or static url referencing the item.</p>
 </div></td></tr></tbody></table><h4 id="usage_returns">Returns</h4><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="apdataservice-getavailableworkflows-page"><p>Resolves with an array of objects defining each of the available workflows for the item.</p>
 </div></td></tr></table></div>
 <h2 id="example">Example</h2>
 <div class="example"><div class="apdataservice-getavailableworkflows-page"><pre class="prettyprint linenums">
-apDataService.getAvailableWorkflows(entity)
+apDataService.getAvailableWorkflows(entity.fileRef.lookupValue)
     .then(function(templateArray) {
          ....templateArray = [{
              "name":"WidgetApproval",
