--- a/partials/api/ListItem.html
+++ b/partials/api/ListItem.html
@@ -6,4 +6,13 @@
 <div class="description"><div class="listitem-page"><p>Base prototype which all list items inherit from.  All methods can be accessed through this prototype so all CRUD
 functionality can be called directly from a given list item.</p>
 </div></div>
+<div class="member method"><h2 id="methods">Methods</h2>
+<ul class="methods"><li><h3 id="methods_getmodel">getModel()</h3>
+<div class="getmodel"><div class="listitem-page listitem-getmodel-page"><p>Allows us to reference the parent model directly from the list item.  This is added to the
+model.factory prototype in apModelFactory.</p>
+</div><h5 id="methods_getmodel_returns">Returns</h5><table class="variables-matrix"><tr><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="listitem-page listitem-getmodel-page"><p>Model for the list item.</p>
+</div></td></tr></table></div>
+</li>
+</ul>
+</div>
 </div>
