--- a/partials/api/ListItem.getModel.html
+++ b/partials/api/ListItem.getModel.html
@@ -5,7 +5,7 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="listitem-getmodel-page"><p>Allows us to reference the parent model directly from the list item.  This is added to the
-model.factory prototype in apModelFactory.</p>
+model.factory prototype in apModelFactory.  See the <a href="#/api/List">List</a> documentation for more info.</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">getModel();</pre>
