Upgraded docs to work better with gulp.

--- a/docs/partials/api/Model.html
+++ b/docs/partials/api/Model.html
@@ -4,15 +4,13 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="model-page"><p>Model Constructor
-Provides the Following</p>
-<ul>
-<li>adds an empty &quot;data&quot; array</li>
-<li>adds an empty &quot;queries&quot; object</li>
-<li>adds a deferred obj &quot;ready&quot;</li>
-<li>builds &quot;model.list&quot; with constructor</li>
-<li>adds &quot;getAllListItems&quot; function</li>
-<li>adds &quot;addNewItem&quot; function</li>
-</ul>
+Provides the Following
+- adds an empty &quot;data&quot; array
+- adds an empty &quot;queries&quot; object
+- adds a deferred obj &quot;ready&quot;
+- builds &quot;model.list&quot; with constructor
+- adds &quot;getAllListItems&quot; function
+- adds &quot;addNewItem&quot; function</p>
 </div></div>
 <h2 id="usage">Usage</h2>
 <div class="usage"><pre class="prettyprint linenums">Model(config);</pre>
