--- a/docs/partials/api/Model.registerQuery.html
+++ b/docs/partials/api/Model.registerQuery.html
@@ -122,8 +122,8 @@ if (!_.isObject(model.queries[queryKey])) {
     });
 }
 //Still using execute query but now we have a custom query
-return model.executeQuery(queryKey);
-</code></pre><p>};
+return model.executeQuery(queryKey);</code></pre>
+<p>};
          pre&gt;</p>
 </div></div>
 </div>
